--- a/src/style.css
+++ b/src/style.css
@@ -8,6 +8,11 @@ body {
   margin: 0 auto;
 }
 
+.grid {
+  display: grid;
+  grid-template-columns: 1fr 2fr 2fr;
+}
+
 header h1 {
   font-weight: 700;
   font-size: 96px;
@@ -43,6 +48,7 @@ header a {
   color: #120f1d;
   display: inline-block;
   margin-top: 32px;
+  border-radius: 5px;
 }
 
 header {
@@ -54,11 +60,53 @@ header {
   text-align: center;
   padding: 200px;
 }
+
+section {
+  max-width: 1200px;
+  margin: 0 auto;
+}
 footer {
   color: white;
+  background-image: linear-gradient(
+      rgba(39, 32, 68, 0.9),
+      rgba(39, 32, 68, 0.9)
+    ),
+    url("../images/piazza.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  padding: 100px 0;
 }
 
-@media (max-width: 900px) {
+footer h3 {
+  font-size: 20px;
+  font-weight: 700;
+  line-height: 30px;
+}
+
+footer p {
+  font-weight: 300;
+  font-size: 16px;
+  line-height: 24px;
+  opacity: 0.7;
+  margin-right: 20px;
+}
+
+footer ul {
+  padding: 0;
+}
+
+footer li {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+footer a {
+  color: white;
+  opacity: 0.7;
+}
+
+@media (max-width: 960px) {
   header {
     padding: 60px 0;
   }
