--- a/src/style.css
+++ b/src/style.css
@@ -69,6 +69,11 @@ body {
   width: 100%;
   aspect-ratio: 1/1;
 }
+
+.instagram-embeds {
+  margin: 30px 0;
+}
+
 header h1 {
   font-weight: 700;
   font-size: 96px;
